--- a/index.html
+++ b/index.html
@@ -13,13 +13,38 @@
       type="text/css"
       href="/src/styles/components/mesh-gradient-background.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/src/styles/components/header.css"
+    />
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script
+      src="https://kit.fontawesome.com/3349982834.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="overflow-x-hidden">
     <!-- Hero section -->
     <div class="mesh-gradient-background-container min-h-svh">
       <div class="mesh-gradient-background"></div>
+      <header class="header w-full shadow-md py-5">
+        <div
+          class="flex justify-between items-center w-full container mx-auto px-5"
+        >
+          <h1 class="font-bold text-lg text-white">Agência LM</h1>
+          <a
+            href="#"
+            target="_blank"
+            rel="noreferrer noopener nofollow"
+            class="bg-purple-500 text-white rounded-full px-4 py-2 shadow-md hover:scale-105 hover:shadow-lg transition-all ease-in-out duration-300 cursor-pointer"
+          >
+            <i class="fa-brands fa-whatsapp"></i>
+            <span>Entrar em contato</span>
+          </a>
+        </div>
+      </header>
       <section class="w-full py-20 lg:p-0 z-10">
         <div
           class="container px-5 flex flex-col lg:flex-row items-center justify-center min-h-svh w-full mx-auto"
