--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       type="text/css"
       href="/src/styles/components/header.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/src/styles/components/card.css"
+    />
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script
@@ -26,7 +31,6 @@
     ></script>
   </head>
   <body class="overflow-x-hidden">
-    <!-- Hero section -->
     <div class="mesh-gradient-background-container min-h-svh">
       <div class="mesh-gradient-background"></div>
       <header class="header w-full shadow-md py-5">
@@ -45,6 +49,8 @@
           </a>
         </div>
       </header>
+
+      <!-- Hero section -->
       <section class="w-full py-20 lg:p-0 z-10">
         <div
           class="container px-5 flex flex-col lg:flex-row items-center justify-center min-h-svh w-full mx-auto"
@@ -56,7 +62,7 @@
               class="flex flex-col gap-1 items-center md:items-start justify-center md:justify-start w-full"
             >
               <h1
-                class="text-4xl font-normal text-center md:text-left md:max-w-3xl"
+                class="text-4xl font-normal text-center md:text-left md:max-w-3xl text-purple-500"
               >
                 Sua clínica é única
               </h1>
@@ -95,6 +101,150 @@
             />
           </div>
         </div>
+      </section>
+
+      <!-- CTA section -->
+      <section
+        class="container px-5 mx-auto flex flex-col items-center justify-center py-20 gap-10"
+      >
+        <div class="space-y-4">
+          <h2 class="text-3xl md:text-4xl font-bold text-white text-center">
+            Garanta sua página autêntica
+            <span class="text-purple-500">HOJE</span> mesmo
+          </h2>
+          <p class="text-lg text-white text-center">
+            Oferta especial por tempo limitado.
+          </p>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+          <div class="card flex flex-col gap-4 items-start justify-center p-4">
+            <img
+              src="/src/public/lp-andre-romano.webp"
+              alt="Mockup"
+              title="Mockup"
+              loading="lazy"
+              class="object-cover pointer-events-none rounded-lg shadow-md"
+            />
+            <div>
+              <h2 class="text-left text-lg text-white font-bold">
+                LP Dr. André Romano
+              </h2>
+              <p class="text-left text-sm font-medium text-purple-500">
+                Clínica de estética facial
+              </p>
+            </div>
+            <span class="text-sm font-normal text-white"
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.</span
+            >
+          </div>
+          <div class="card flex flex-col gap-4 items-start justify-center p-4">
+            <img
+              src="/src/public/lp-bruno-caldas.webp"
+              alt="Mockup"
+              title="Mockup"
+              loading="lazy"
+              class="object-cover pointer-events-none rounded-lg shadow-md"
+            />
+            <div>
+              <h2 class="text-left text-lg text-white font-bold">
+                LP Dr. Bruno Caldas
+              </h2>
+              <p class="text-left text-sm font-medium text-purple-500">
+                Clínica de estética
+              </p>
+            </div>
+            <span class="text-sm font-normal text-white"
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.</span
+            >
+          </div>
+          <div class="card flex flex-col gap-4 items-start justify-center p-4">
+            <img
+              src="/src/public/lp-cionara.webp"
+              alt="Mockup"
+              title="Mockup"
+              loading="lazy"
+              class="object-cover pointer-events-none rounded-lg shadow-md"
+            />
+            <div>
+              <h2 class="text-left text-lg text-white font-bold">
+                LP Dra. Cionara
+              </h2>
+              <p class="text-left text-sm font-medium text-purple-500">
+                Método de emagrecimento
+              </p>
+            </div>
+            <span class="text-sm font-normal text-white"
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.</span
+            >
+          </div>
+          <div class="card flex flex-col gap-4 items-start justify-center p-4">
+            <img
+              src="/src/public/lp-dra-paula-alonso.webp"
+              alt="Mockup"
+              title="Mockup"
+              loading="lazy"
+              class="object-cover pointer-events-none rounded-lg shadow-md"
+            />
+            <div>
+              <h2 class="text-left text-lg text-white font-bold">
+                LP Dra. Paula Alonso
+              </h2>
+              <p class="text-left text-sm font-medium text-purple-500">
+                Clínica de odontologia
+              </p>
+            </div>
+            <span class="text-sm font-normal text-white"
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.</span
+            >
+          </div>
+          <div class="card flex flex-col gap-4 items-start justify-center p-4">
+            <img
+              src="/src/public/lp-raquel-soares.webp"
+              alt="Mockup"
+              title="Mockup"
+              loading="lazy"
+              class="object-cover pointer-events-none rounded-lg shadow-md"
+            />
+            <div>
+              <h2 class="text-left text-lg text-white font-bold">
+                LP Dra. Raquel Soares
+              </h2>
+              <p class="text-left text-sm font-medium text-purple-500">
+                Advocacia
+              </p>
+            </div>
+            <span class="text-sm font-normal text-white"
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.</span
+            >
+          </div>
+          <div class="card flex flex-col gap-4 items-start justify-center p-4">
+            <img
+              src="/src/public/lp-tatiana.webp"
+              alt="Mockup"
+              title="Mockup"
+              loading="lazy"
+              class="object-cover pointer-events-none rounded-lg shadow-md"
+            />
+            <div>
+              <h2 class="text-left text-lg text-white font-bold">
+                LP Dra. Tatiana
+              </h2>
+              <p class="text-left text-sm font-medium text-purple-500">
+                Clínica de estética facial
+              </p>
+            </div>
+            <span class="text-sm font-normal text-white"
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.</span
+            >
+          </div>
+        </div>
+
+        <button
+          class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
+        >
+          Garantir minha landing page
+        </button>
       </section>
     </div>
   </body>
