feat: add offer section

--- a/index.html
+++ b/index.html
@@ -246,6 +246,147 @@
           Garantir minha landing page
         </button>
       </section>
+
+      <!-- Offer section -->
+      <section class="container px-5 mx-auto w-full py-20 lg:p-0 z-10">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+          <div class="card flex flex-col p-4 gap-5">
+            <div class="flex gap-1 items-center justify-start">
+              <i
+                class="fa-solid fa-star-half-stroke text-xl text-purple-500"
+              ></i>
+              <h3 class="capitalize text-white">landing page simples</h3>
+            </div>
+
+            <div class="flex flex-col gap-1 items-start">
+              <span class="font-bold font-base text-purple-500"
+                >POR APENAS</span
+              >
+              <span class="text-white text-lg font-semibold line-through">R$ 1.499,90</span>
+              <div class="flex items-center gap-4">
+                <h2 class="text-4xl text-white font-bold">12x R$ 89,79</h2>
+                <div
+                  class="flex items-center justify-center rounded-full p-1 px-2 bg-purple-500 w-fit animate-bounce"
+                >
+                  <span class="text-xs text-white">+40% off</span>
+                </div>
+              </div>
+            </div>
+
+            <ul class="space-y-2 mt-5">
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Criação da copy a partir de briefing estratégico.</span
+                >
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Hospedagem do site. (necessário ter hospedagem)</span
+                >
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Direito a até 2 alterações sem custo adicional.</span
+                >
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal">
+                  Auxílio completo para contratação da hospedagem. (caso ainda
+                  não tenha)
+                </span>
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Página autêntica e única, feita para converter.</span
+                >
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-xmark text-gray-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Formulário de captação integrado com Google Planilhas</span
+                >
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-xmark text-gray-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Animações elaboradas</span
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="card flex flex-col p-4 gap-5">
+            <div class="flex gap-1 items-center justify-start">
+              <i class="fa-solid fa-star text-xl text-purple-500"></i>
+              <h3 class="capitalize text-white">landing page avançada</h3>
+            </div>
+
+            <div class="flex flex-col gap-1 items-start">
+              <span class="font-bold font-base text-purple-500"
+                >POR APENAS</span
+              >
+              <div class="flex flex-col items-start gap-1">
+                <h2 class="text-4xl text-white font-bold">12x R$ 153,58</h2>
+                <div
+                  class="flex items-center justify-center rounded-full p-1 px-2 bg-purple-500 w-fit"
+                >
+                  <span class="text-xs text-white">OU R$ 1.535,90 no PIX</span>
+                </div>
+              </div>
+            </div>
+
+            <ul class="space-y-2 mt-5">
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Criação da copy a partir de briefing estratégico.</span
+                >
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Hospedagem do site. (necessário ter hospedagem)</span
+                >
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Direito a até 3 alterações sem custo adicional.</span
+                >
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal">
+                  Auxílio completo para contratação da hospedagem. (caso ainda
+                  não tenha)
+                </span>
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Página autêntica e única, feita para converter.</span
+                >
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Formulário de captação integrado com Google Planilhas</span
+                >
+              </li>
+              <li class="flex items-center gap-1">
+                <i class="fa-solid fa-circle-check text-purple-500"></i>
+                <span class="text-white text-sm font-normal"
+                  >Animações elaboradas</span
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
