--- a/index.html
+++ b/index.html
@@ -467,6 +467,57 @@
             </div>
           </div>
         </section>
+
+        <!-- About our service section -->
+        <section class="container px-5 mx-auto w-full lg:p-0">
+          <div class="grid flex flex-col w-full gap-5">
+            <div class="space-y-10">
+              <h1 class="text-4xl text-white font-bold text-center">
+                Design Sofisticado, Resultados Reais
+              </h1>
+              <div class="card p-5 w-full lg:max-w-2/3 mx-auto">
+                <ul class="space-y-2 mt-5">
+                  <li class="flex items-center gap-1">
+                    <i class="fa-solid fa-circle-check text-purple-500"></i>
+                    <span class="text-white text-sm font-normal"
+                      >Especialistas em criação de Landing Pages estratégicas
+                      para clínicas de estética, odontologia e saúde.</span
+                    >
+                  </li>
+                  <li class="flex items-center gap-1">
+                    <i class="fa-solid fa-circle-check text-purple-500"></i>
+                    <span class="text-white text-sm font-normal"
+                      >Metodologia própria: briefing assertivo + protótipo
+                      aprovado antes da execução.</span
+                    >
+                  </li>
+                  <li class="flex items-center gap-1">
+                    <i class="fa-solid fa-circle-check text-purple-500"></i>
+                    <span class="text-white text-sm font-normal"
+                      >Mais de 30 projetos entregues com satisfação
+                      comprovada.</span
+                    >
+                  </li>
+                  <li class="flex items-center gap-1">
+                    <i class="fa-solid fa-circle-check text-purple-500"></i>
+                    <span class="text-white text-sm font-normal">
+                      Comunicação autêntica, criativa e sofisticada — sem
+                      promessas irreais.
+                    </span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="w-full lg:h-[768px] hidden lg:block">
+              <iframe
+                src="https://my.spline.design/macbookprocopy-hNM4hXEsfxfy882BTYjlFDE1/"
+                frameborder="0"
+                width="100%"
+                height="100%"
+              ></iframe>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
