--- a/index.html
+++ b/index.html
@@ -470,13 +470,15 @@
 
         <!-- About our service section -->
         <section class="container px-5 mx-auto w-full lg:p-0">
-          <div class="grid flex flex-col w-full gap-5">
+          <div
+            class="grid grid-cols-1 md:grid-cols-2 w-full gap-5 items-center"
+          >
             <div class="space-y-10">
               <h1 class="text-4xl text-white font-bold text-center">
                 Design Sofisticado, Resultados Reais
               </h1>
-              <div class="card p-5 w-full lg:max-w-2/3 mx-auto">
-                <ul class="space-y-2 mt-5">
+              <div class="card p-5 w-full mx-auto">
+                <ul class="space-y-2">
                   <li class="flex items-center gap-1">
                     <i class="fa-solid fa-circle-check text-purple-500"></i>
                     <span class="text-white text-sm font-normal"
@@ -508,13 +510,14 @@
                 </ul>
               </div>
             </div>
-            <div class="w-full lg:h-[768px] hidden lg:block">
-              <iframe
-                src="https://my.spline.design/macbookprocopy-hNM4hXEsfxfy882BTYjlFDE1/"
-                frameborder="0"
-                width="100%"
-                height="100%"
-              ></iframe>
+            <div class="w-full h-auto">
+              <img
+                src="/src/public/mockup-2.webp"
+                alt="Mockup 2"
+                title="Mockup"
+                loading="lazy"
+                class="object-cover pointer-events-none"
+              />
             </div>
           </div>
         </section>
