feat: add final call to action section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <link
       rel="stylesheet"
       type="text/css"
+      href="/src/styles/global.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
       href="/src/styles/components/mesh-gradient-background.css"
     />
     <link
@@ -94,7 +99,7 @@
             </div>
             <div class="w-full md:w-1/2">
               <img
-                src="/src/public/mockup.webp"
+                src="/public/mockup.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -123,7 +128,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/src/public/lp-andre-romano.webp"
+                src="/public/lp-andre-romano.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -145,7 +150,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/src/public/lp-bruno-caldas.webp"
+                src="/public/lp-bruno-caldas.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -167,7 +172,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/src/public/lp-cionara.webp"
+                src="/public/lp-cionara.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -189,7 +194,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/src/public/lp-dra-paula-alonso.webp"
+                src="/public/lp-dra-paula-alonso.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -211,7 +216,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/src/public/lp-raquel-soares.webp"
+                src="/public/lp-raquel-soares.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -233,7 +238,7 @@
               class="card flex flex-col gap-4 items-start justify-center p-4"
             >
               <img
-                src="/src/public/lp-tatiana.webp"
+                src="/public/lp-tatiana.webp"
                 alt="Mockup"
                 title="Mockup"
                 loading="lazy"
@@ -512,13 +517,84 @@
             </div>
             <div class="w-full h-auto">
               <img
-                src="/src/public/mockup-2.webp"
+                src="/public/mockup-2.webp"
                 alt="Mockup 2"
                 title="Mockup"
                 loading="lazy"
                 class="object-cover pointer-events-none"
               />
             </div>
+          </div>
+        </section>
+
+        <!-- Final CTA section -->
+        <section class="container px-5 mx-auto w-full lg:p-0">
+          <div
+            class="flex flex-col items-center gap-10 md:p-10 rounded-xl md:border md:border-purple-500 relative"
+          >
+            <div class="w-full h-full hidden md:block bg-clinic absolute top-0 left-0 rounded-xl"></div>
+            <div class="space-y-4 text-center">
+              <h1 class="text-4xl font-bold text-purple-500">
+                Oferta Exclusiva e por Tempo Limitado
+              </h1>
+
+              <p class="text-base font-normal text-white">
+                Aproveite essa condição especial e transforme sua clínica em
+                referência digital
+              </p>
+            </div>
+
+            <div class="space-y-4">
+              <div
+                class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
+              >
+                <i class="fa-solid fa-dollar-sign"></i>
+                <span
+                  >Oferta especial de lançamento: de
+                  <span class="line-through">R$ 1.499,90</span> por apenas
+                  <span class="bg-purple-500 p-1 px-2 rounded-full"
+                    >R$ 897,90</span
+                  ></span
+                >
+              </div>
+              <div
+                class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
+              >
+                <i class="fa-solid fa-lock"></i>
+                <span
+                  >Condições válidas apenas para as
+                  <span class="md:bg-purple-500 md:p-1 md:px-2 md:rounded-full"
+                    >10 primeiras clínicas</span
+                  >
+                  que fecharem contrato este mês.</span
+                >
+              </div>
+              <div class="flex flex-col gap-1">
+                <div
+                  class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
+                >
+                  <i class="fa-solid fa-gift"></i>
+                  <span
+                    >Bônus exclusivo:
+                    <span class="md:bg-purple-500 md:p-1 md:px-2 md:rounded-full"
+                      >planilha automatizada</span
+                    >
+                    para gestão de leads
+                    <span class="text-purple-500">*</span></span
+                  >
+                </div>
+                <span class="text-white text-xs"
+                  >* bônus válido apenas para a opção de
+                  <b>Landing Page Avançada</b></span
+                >
+              </div>
+            </div>
+
+            <button
+              class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
+            >
+              Quero minha Landing Page
+            </button>
           </div>
         </section>
       </main>
