feat: add buttons on offer cards

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <button
                   class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
                 >
-                  Garantir minha landing page
+                  Garantir minha LP autêntica
                 </button>
               </div>
             </div>
@@ -261,7 +261,7 @@
           <button
             class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
           >
-            Garantir minha landing page
+            Garantir minha Landing Page
           </button>
         </section>
 
@@ -338,6 +338,12 @@
                   >
                 </li>
               </ul>
+
+              <button
+                class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl mt-5"
+              >
+                Garantir promoção
+              </button>
             </div>
             <div class="card flex flex-col p-4 gap-5">
               <div class="flex gap-1 items-center justify-start">
@@ -406,6 +412,12 @@
                   >
                 </li>
               </ul>
+
+              <button
+                class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl mt-5"
+              >
+                Garantir minha LP avançada
+              </button>
             </div>
           </div>
         </section>
@@ -532,7 +544,9 @@
           <div
             class="flex flex-col items-center gap-10 md:p-10 rounded-xl md:border md:border-purple-500 relative"
           >
-            <div class="w-full h-full hidden md:block bg-clinic absolute top-0 left-0 rounded-xl"></div>
+            <div
+              class="w-full h-full hidden md:block bg-clinic absolute top-0 left-0 rounded-xl"
+            ></div>
             <div class="space-y-4 text-center">
               <h1 class="text-4xl font-bold text-purple-500">
                 Oferta Exclusiva e por Tempo Limitado
@@ -548,7 +562,7 @@
               <div
                 class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
               >
-                <i class="fa-solid fa-dollar-sign"></i>
+                <i class="fa-solid fa-dollar-sign text-purple-500"></i>
                 <span
                   >Oferta especial de lançamento: de
                   <span class="line-through">R$ 1.499,90</span> por apenas
@@ -560,7 +574,7 @@
               <div
                 class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
               >
-                <i class="fa-solid fa-lock"></i>
+                <i class="fa-solid fa-lock text-purple-500"></i>
                 <span
                   >Condições válidas apenas para as
                   <span class="md:bg-purple-500 md:p-1 md:px-2 md:rounded-full"
@@ -573,10 +587,11 @@
                 <div
                   class="bg-purple-500/10 border border-purple-500 rounded-md p-5 text-white"
                 >
-                  <i class="fa-solid fa-gift"></i>
+                  <i class="fa-solid fa-gift text-purple-500"></i>
                   <span
                     >Bônus exclusivo:
-                    <span class="md:bg-purple-500 md:p-1 md:px-2 md:rounded-full"
+                    <span
+                      class="md:bg-purple-500 md:p-1 md:px-2 md:rounded-full"
                       >planilha automatizada</span
                     >
                     para gestão de leads
@@ -593,7 +608,7 @@
             <button
               class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
             >
-              Quero minha Landing Page
+              Quero minha LP autêntica
             </button>
           </div>
         </section>
