style: update final call to action styles

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </header>
 
-      <main class="z-10 space-y-20">
+      <main class="z-10 space-y-20 py-20 md:pt-0">
         <!-- Hero section -->
         <section class="w-full lg:p-0">
           <div
@@ -542,11 +542,8 @@
         <!-- Final CTA section -->
         <section class="container px-5 mx-auto w-full lg:p-0">
           <div
-            class="flex flex-col items-center gap-10 md:p-10 rounded-xl md:border md:border-purple-500 relative"
+            class="final-cta-card flex flex-col items-center gap-10 md:p-10 rounded-xl md:border md:border-purple-500 relative w-fit mx-auto"
           >
-            <div
-              class="w-full h-full hidden md:block bg-clinic absolute top-0 left-0 rounded-xl"
-            ></div>
             <div class="space-y-4 text-center">
               <h1 class="text-4xl font-bold text-purple-500">
                 Oferta Exclusiva e por Tempo Limitado
