style: update hero title style

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 class="flex flex-col gap-1 items-center md:items-start justify-center md:justify-start w-full"
               >
                 <h1
-                  class="text-4xl font-normal text-center md:text-left md:max-w-3xl text-purple-500"
+                  class="text-3xl text-center font-bold md:text-left md:max-w-3xl text-purple-500 uppercase"
                 >
                   Sua clínica é única
                 </h1>
