feat: add animation to benefit cards

--- a/index.html
+++ b/index.html
@@ -444,7 +444,10 @@
 
         <!-- Benefits section -->
         <section class="container px-5 mx-auto w-full lg:p-0">
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+          <div
+            id="benefits-section"
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"
+          >
             <div class="flex items-center justify-center p-2">
               <h2
                 class="text-white text-2xl font-bold text-center lg:text-left"
@@ -453,6 +456,7 @@
               </h2>
             </div>
             <div
+              id="benefit-one"
               class="card rounded-sm flex items-center justify-between p-4 gap-3"
             >
               <div class="p-3 rounded-xl bg-purple-500 shadow-md">
@@ -463,6 +467,7 @@
               </h3>
             </div>
             <div
+              id="benefit-two"
               class="card rounded-sm flex items-center justify-between p-4 gap-3"
             >
               <div class="p-3 rounded-xl bg-purple-500 shadow-md">
@@ -473,6 +478,7 @@
               </h3>
             </div>
             <div
+              id="benefit-three"
               class="card rounded-sm flex items-center justify-between p-4 gap-3"
             >
               <div class="p-3 rounded-xl bg-purple-500 shadow-md">
@@ -483,6 +489,7 @@
               </h3>
             </div>
             <div
+              id="benefit-four"
               class="card rounded-sm flex items-center justify-between p-4 gap-3"
             >
               <div class="p-3 rounded-xl bg-purple-500 shadow-md">
@@ -493,6 +500,7 @@
               </h3>
             </div>
             <div
+              id="benefit-five"
               class="card rounded-sm flex items-center justify-between p-4 gap-3"
             >
               <div class="p-3 rounded-xl bg-purple-500 shadow-md">
