feat: add animation to first mockup

--- a/index.html
+++ b/index.html
@@ -61,11 +61,15 @@
 
       <main class="z-10 space-y-20 py-20 md:pt-0">
         <!-- Hero section -->
-        <section class="w-full lg:p-0">
+        <section
+          id="hero-section"
+          class="w-full lg:p-0"
+        >
           <div
             class="container px-5 flex flex-col lg:flex-row items-center justify-center min-h-svh w-full mx-auto"
           >
             <div
+              id="hero-headline"
               class="flex flex-col gap-8 items-center md:items-start justify-center text-white md:justify-start w-full md:w-1/2"
             >
               <div
@@ -101,7 +105,10 @@
                 </button>
               </div>
             </div>
-            <div class="w-full md:w-1/2">
+            <div
+              id="mockup-one-container"
+              class="w-full md:w-1/2"
+            >
               <img
                 src="/public/mockup.webp"
                 alt="Mockup"
