feat: add animation to our services section

--- a/index.html
+++ b/index.html
@@ -521,7 +521,10 @@
         </section>
 
         <!-- About our service section -->
-        <section class="container px-5 mx-auto w-full lg:p-0">
+        <section
+          id="our-service-section"
+          class="container px-5 mx-auto w-full lg:p-0"
+        >
           <div
             class="grid grid-cols-1 md:grid-cols-2 w-full gap-5 items-center"
           >
@@ -529,7 +532,10 @@
               <h1 class="text-4xl text-white font-bold text-center">
                 Design Sofisticado, Resultados Reais
               </h1>
-              <div class="card p-5 w-full mx-auto">
+              <div
+                id="our-service-content"
+                class="card p-5 w-full mx-auto"
+              >
                 <ul class="space-y-2">
                   <li class="flex items-center gap-1">
                     <i class="fa-solid fa-circle-check text-purple-500"></i>
@@ -562,7 +568,10 @@
                 </ul>
               </div>
             </div>
-            <div class="w-full h-auto">
+            <div
+              id="mockup-two-container"
+              class="w-full h-auto"
+            >
               <img
                 src="/public/mockup-2.webp"
                 alt="Mockup 2"
