feat: add animation to final call to action section

--- a/index.html
+++ b/index.html
@@ -584,8 +584,9 @@
         </section>
 
         <!-- Final CTA section -->
-        <section class="container px-5 mx-auto w-full lg:p-0">
+        <section id="final-cta-section" class="container px-5 mx-auto w-full lg:p-0">
           <div
+          id="final-cta-content"
             class="final-cta-card flex flex-col items-center gap-10 md:p-10 rounded-xl md:border md:border-purple-500 relative w-fit mx-auto"
           >
             <div class="space-y-4 text-center">
