--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 class="flex flex-wrap items-center justify-center md:justify-start gap-4 w-full"
               >
                 <button
-                  class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
+                  class="cta-animate bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
                 >
                   Garantir minha LP autêntica
                 </button>
@@ -660,7 +660,7 @@
             </div>
 
             <button
-              class="bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
+              class="cta-animate bg-purple-500 px-10 py-5 text-lg font-medium rounded-full text-white w-full md:w-fit cursor-pointer hover:scale-105 transition-all ease-in-out duration-300 shadow-md hover:shadow-xl"
             >
               Quero minha LP autêntica
             </button>
