feat: add new fonts

--- a/index.html
+++ b/index.html
@@ -77,20 +77,20 @@
                 class="flex flex-col gap-1 items-center md:items-start justify-center md:justify-start w-full"
               >
                 <h1
-                  class="text-3xl text-center font-bold md:text-left md:max-w-3xl text-purple-500 uppercase"
+                  class="font-poppins-bold text-3xl text-center font-bold md:text-left md:max-w-3xl text-purple-500 uppercase"
                 >
                   Sua clínica é única
                 </h1>
                 <div
                   aria-hidden="true"
                   id="headline"
-                  class="text-4xl lg:text-6xl font-bold text-center md:text-left md:max-w-3xl"
+                  class="font-theseasons text-4xl lg:text-6xl font-bold text-center md:text-left md:max-w-3xl"
                 >
                   Sua presença digital também precisa ser.
                 </div>
                 <h2
                   aria-hidden="true"
-                  class="sr-only text-4xl lg:text-6xl font-bold text-center md:text-left md:max-w-3xl"
+                  class="sr-only font-theseasons text-4xl lg:text-6xl font-bold text-center md:text-left md:max-w-3xl"
                 >
                   Sua presença digital também precisa ser.
                 </h2>
@@ -538,8 +538,10 @@
             class="grid grid-cols-1 md:grid-cols-2 w-full gap-5 items-center"
           >
             <div class="space-y-10">
-              <h1 class="text-4xl text-white font-bold text-center">
-                Design Sofisticado, Resultados Reais
+              <h1 class="text-4xl text-white font-bold md:text-left">
+                Design
+                <span class="text-purple-500 font-theseasons">Sofisticado</span
+                >, <br />Resultados Reais
               </h1>
               <div
                 id="our-service-content"
