--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
         <div
           class="flex justify-between items-center w-full container mx-auto px-5"
         >
-          <h1 class="font-bold text-lg text-white">Agência LM</h1>
+          <div class="flex gap-2 items-center">
+            <img
+              src="/public/lm-logo.svg"
+              alt="Logo Agência LM"
+              loading="lazy"
+              class="pointer-events-none size-10"
+            />
+            <h1 class="font-bold text-lg text-white">Agência LM</h1>
+          </div>
           <a
             href="#"
             target="_blank"
